--- a/Chess/Chess/Chess.vcxproj
+++ b/Chess/Chess/Chess.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bdcfcc37-0564-4710-b235-cb8435d26fd2}</ProjectGuid>
+    <ProjectGuid>{f7bca016-72d3-4a9d-bb4c-81fa8fa1bf7d}</ProjectGuid>
     <RootNamespace>Chess</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,13 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Chess.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="board.cpp" />
+    <ClCompile Include="Chess.cpp" />
     <ClCompile Include="Piece.cpp" />
     <ClCompile Include="play.cpp" />
     <ClCompile Include="print.cpp" />
+    <ClCompile Include="promotion.cpp" />
+    <ClCompile Include="Queue.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chess.h" />
+    <ClInclude Include="Queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
